updated nonprofit case study findings

--- a/ef.html
+++ b/ef.html
@@ -79,7 +79,7 @@
 
 			<h4>Outcome</h4>
 			<p>
-				We delivered a comprehensive report that included all our stakeholder and user research findings and outputs from collaborative Product Visioning + Roadmapping sessions.
+				We delivered a comprehensive report that included all our stakeholder and user research findings, synthesis artifacts (Modes & Mindsets and Journey Maps) and outputs from collaborative Product Visioning + Roadmapping sessions.
 			</p>
 
 		</div>
@@ -107,8 +107,8 @@
 	<div class="full-width-mid-page">
 		<div class="panel dark" style="background-color: var(--purple);">
 			<div style="z-index: 2; padding: 10%; position: absolute; width: -webkit-fill-available; top: 50%; -ms-transform: translateY(-50%); transform: translateY(-50%);">
-				<h4>How might we</h4>
-				<h2 style="color: black">transform insights on organizational challenges and user needs into actionable takeaways?</h2>				
+				<h4>Research Objective</h4>
+				<h2 style="color: black">Understand why people navigate to the site, what information they are interested in finding, and why they eventually leave.</h2>				
 			</div>
 			<img style="width: 100vw; padding: 0; z-index: 1" class="pic-left" src="pics/Nonprofit/hmw.png">
 		</div>
@@ -121,7 +121,7 @@
 				<h3>We had 12 weeks and a client with a large appetite for interviews. I owned the following activities:</h3>
 				<ul>
 					<li>Heuristic Evaluation - Usability analysis of key pages on the client's website.</li>
-					<li>Stakeholder Research - Guided conversations with (17 members of) internal leadership and (11) external partners to understand goals, priorities, and challenges.</li>
+					<li>Stakeholder Research - Guided conversations with (17 members of) internal leadership and (11) external partners to understand organizational goals, priorities, and challenges.</li>
 					<li>User Research - Guided conversations and usability testing sessions with (16) end users to understand their lived experiences and approach to using the website.</li>
 					<li>Synthesis - Affinity diagramming to pull out key themes</li>
 					<li>Modest & Mindsets + Journey Maps - Approach + experience driven models that will help us understand user needs and prioritize features.</li>
@@ -132,36 +132,75 @@
 	<div class="panel" id="Component Audit">
 		<h2 class="body right">What We Learned</h2>
 			<div class="body right">
+				<h3>These were are overarching takeaways from all our research activities:</h3>
+				<ol>
+					<li>Usability issues stem from organizational issues</li>
+					<li>Information overload hinders understandability and findability</li>
+					<li>To engage, users need to trust the organization</li>
+					<li>There is no “one size fits all” solution for improving reach and engagement</li>
+				</ol>
 
-				<h3>Usability issues stem from organizational issues</h3>
-				<p>As the organization has grown, its website has not effectively scaled with it. Siloed systems and unclear strategy have prevented departments from forming effective content and data governance processes. This trickles down into every aspect of the end-user web experience, from information overload to the lack of engagement and personalization strategy.</p>
-
-				<img src="pics/Nonprofit/stakeholder.png" class="pic-right">
-				
-				<h3>Information overload hinders understandability and findability</h3>
-				<p>The Information Architecture, navigation components, and Calls to Action are visually confusing and do not match user expectations. There are many inaccessible components across the site (inadequate color contrast or missing labels). Combined with the vast amount of information, the confusing structural organization of the site hinders users’ ability to find what they need efficiently.</p>
-
-				<img src="pics/Nonprofit/info-overload.png" class="pic-right">
-
-				<h3>To engage, users need to trust the organization</h3>
-				<p>Many end users experience isolation, feeling overwhelmed, and frustrated during their diagnosis process. Most users want to learn about the basics of this health topic, treatment options, and first aid from a science-backed, up-to-date, reliable source. Users who are unfamiliar with the org need to build trust in the organization before committing to getting involved with their time, money, or other resources.</p>
-
-				<img src="pics/Nonprofit/trust.png" class="pic-right">
-
-				<h3>There is no “one size fits all” solution for improving reach and engagement</h3>
-				<p>Getting diagnosed with and treating with this condition is highly personal, variable, and based on one’s access to specialized healthcare, background, trust in doctors, etc. It’s important to acknowledge the inherent health disparities that come with privilege (or lack thereof) – those who need the organization the most may never get engaged due to access barriers and lack of awareness. That's why it was so important to go past demographic-based Personas and delve into highly granular Mindsets, based off characteristic and attributes.</p>
-
-				<img src="pics/Nonprofit/diversity.png" class="pic-right">
-
+				<div class="space"></div>
 			</div>
 	</div>
 
-<!-- 	<div class="panel" id="Component Audit">
-		<h2 class="body right">Executive Summary: What We Learned</h2>
-			<div class="body right">
 
+	<div class="full-width-mid-page" style="margin-bottom: 0">
+		<div class="panel dark" style="text-align: left;">
+			<div class="mid-panel-text">
+				<h3>1. Usability issues stem from organizational issues</h3>
+				<ul>
+					<li>As the organization has grown, its website has not effectively scaled with it.</li> 
+					<li>Siloed systems and unclear strategy have prevented departments from forming effective content and data governance processes.</li>
+					<li>This trickles down into every aspect of the end-user web experience, from information overload to the lack of engagement and personalization strategy.</li>
+				</ul>
 			</div>
-	</div> -->
+			<img class="pic-left" src="pics/Nonprofit/stakeholder.png">
+		</div>
+	</div>
+
+	<div class="full-width-mid-page" style="margin-bottom: 0">
+		<div class="panel dark" style="background-color: white; color: black; text-align: left">
+			<div class="mid-panel-text">
+				<h3>2. Information overload hinders understandability and findability</h3>
+				<ul>
+					<li>The Information Architecture, navigation components, and Calls to Action are visually confusing and do not match user expectations.</li> 
+					<li>There are many inaccessible components across the site (inadequate color contrast or missing labels).</li> 
+					<li>Combined with the vast amount of information, the confusing structural organization of the site hinders users’ ability to find what they need efficiently.</li>
+				</ul>
+			</div>
+			<img class="pic-left" src="pics/Nonprofit/info-overload.png">
+		</div>
+	</div>
+
+	<div class="full-width-mid-page" style="margin-bottom: 0">
+		<div class="panel dark" style="text-align: left;">
+			<div class="mid-panel-text">
+				<h3>3. To engage, users need to trust the organization</h3>
+				<ul>
+					<li>Many end users experience feeling isolated, overwhelmed, and frustrated during their diagnosis process.</li> 
+					<li>Most users want to learn about the basics of this health topic, treatment options, and first aid from a science-backed, up-to-date, reliable source.</li>
+					<li>Users who are unfamiliar with the org need to build trust in the organization before committing to getting involved with their time, money, or other resources.</li>
+				</ul>
+			</div>
+			<img class="pic-left" src="pics/Nonprofit/stakeholder.png">
+		</div>
+	</div>
+
+	<div class="full-width-mid-page" style="margin-bottom: 0">
+		<div class="panel dark" style="background-color: white; color: black; text-align: left">
+			<div class="mid-panel-text">
+				<h3>4. There is no “one size fits all” solution for improving reach and engagement</h3>
+				<ul>
+					<li>Getting diagnosed with and treating with this condition is highly personal, variable, and based on one’s access to specialized healthcare, background, trust in doctors, etc.</li> 
+					<li>It’s important to acknowledge the inherent health disparities that come with privilege (or lack thereof) – those who need the organization the most may never get engaged due to access barriers and lack of awareness.</li> 
+					<li>That's why it was so important to go past demographic-based Personas and delve into highly granular Mindsets, based off characteristic and attributes.</li>
+				</ul>
+			</div>
+			<img class="pic-left" src="pics/Nonprofit/diversity.png">
+		</div>
+	</div>
+
 	  	
   	<div id="footer"></div>
   	</meta>
