finished nonprofit case study

--- a/ef.html
+++ b/ef.html
@@ -129,7 +129,7 @@
 			</div>
 	</div>
 
-	<div class="panel" id="Component Audit">
+	<div class="panel" id="What We Learned">
 		<h2 class="body right">What We Learned</h2>
 			<div class="body right">
 				<h3>These were are overarching takeaways from all our research activities:</h3>
@@ -200,6 +200,102 @@
 			<img class="pic-left" src="pics/Nonprofit/diversity.png">
 		</div>
 	</div>
+
+	<div class="panel" id="Component Audit">
+		<h2 class="body right">Our Recommendations</h2>
+			<div class="body right">
+				<h3>To enable the client to employ nuanced personalization strategies, I created nuanced models - Modes, Mindsets, and Journeys - that provide insight on the characteristics, behaviors, priorities beyond demographics.</h3>
+
+				<div class="space"></div>
+
+				<h4>Modes</h4>
+				<p>Behaviors or tasks. Modes outline what people do throughout their journey with their condition.</p>
+
+				<div class="space"></div>
+
+				<h4>Mindsets</h4>
+				<p>Characteristics or attributes. Mindsets help us understand how people experience their journey with their condition.</p>
+
+				<div class="space"></div>
+
+				<h4>Journeys</h4>
+				<p>The experience of a mindset within various modes. By overlaying a mindset onto a mode, or several modes, we can identify the user’s perspective and needs in a journey.</p>
+
+				<div class="short-divider"></div>
+
+				<p>I created 9 Mindsets and 11 Modes. To narrow in on priorities, we had the client select their top 3 mindsets that they <i>must</i> serve with their website. I created corresponding journeys for those 3 mindsets that.</p>
+			</div>
+	</div>
+
+	<div class="full-width-mid-page">
+		<div class="panel dark" style="text-align: left;">
+			<div class="mid-panel-text">
+				<h3>Motivated Caregiver Journey</h3>
+				<ul>
+					<li>The “Motivated Caregiver” mindset is responsible for the care and safety of a child who has the disorder our client’s website aims to educate folks about. This user is highly motivated to find information online but is not connected with the larger community.</li> 
+					<li>The client identified this Mindset as their #1 priority to reach on their website.</li>
+					<li>Contextualizing individual behavior and feelings helped us recommend more tailored opportunities to improve the website, such as positioning itself as a reputable content source <i>before</i> asking users to engage with the community or donate.</li>
+					<li>These opportunities ultimately served as inputs to our Product Roadmap session with the client.</li>
+				</ul>
+			</div>
+			<img class="pic-left" src="pics/Nonprofit/journey.png">
+		</div>
+	</div>
+
+	<div class="panel" id="Component Audit">
+		<h2 class="body right">Design Principles</h2>
+			<div class="body right">
+				<h3>Along with identifying specific features and improvement opportunities, I developed a list of design principles for the client to employ during any future redesign effort:</h3>
+
+				<div class="space"></div>
+
+				<h4>Accessible</h4>
+				<p>The website will provide content that is universally easy to understand and find and features that are easy to use, regardless of user ability or background.</p>
+
+				<div class="space"></div>
+
+				<h4>Personalized</h4>
+				<p>The website will leverage the research we have done on user journeys as the organization works on leveraging behavioral data to feed personalized content to users throughout their journey.</p>
+
+				<div class="space"></div>
+
+				<h4>Person (with condition)-Centric</h4>
+				<p>The website will center around the experience of people with the condition. It aims to support and connect them and their caregivers before any other group.</p>
+
+				<div class="space"></div>
+
+				<h4>Trustworthy</h4>
+				<p>The website will instill trust in its users by presenting fact-based, accurate, updated information and clearly communicating their mission and brand.</p>
+
+			</div>
+	</div>
+
+	<div class="panel" id="Outcome">
+		<h2 class="body right">Outcome</h2>
+		<div class="body right">
+            <h3>The synthesis models, design principles, and the org's new and improved product vision + prioritized backlog we delivered will help the client turn our research into action.</h3>
+
+            <div class="space"></div>
+
+            <h4>Takeaways</h4>
+            <ul>
+            	<li>On a personal note, this was my first time identifying that my team was under-staffed (I was drowning trying to prep, lead, and transcribe notes for ~50 interviews), requesting (and receiving!) support, and ultimately managing someone junior to me.</li> 
+            	<li>I had to figure out how to let go some of my control and trust my mentee to deliver. I had to figure out how to effectively delegate and help us both grow -- like overcoming the desire to re-do work myself rather than provide feedback.</li>
+            </ul>
+
+            <div class="space"></div>
+
+            <div style="padding: 5%; background-color: var(--lightpink)">
+            	<h4>Testimonials</h4>		
+            	<div class="last"><div class="short-divider"></div></div>
+            	<p>"I feel like our website is akin to us being dropped in the Amazon rainforest and you are providing us the GPS to get out" <i>-Client, re: Heuristic Evaluation & Stakeholder Research</i></p>
+
+            	<div class="space"></div>
+
+            	<p>"This here really helps me get an understanding of the resources we need and what we need to focus on when we do the redesign. When we look at the user experience, moving the site from informational to educational. This is really really good information" <i>-Client, re: Modes & Mindsets</i></p>
+        	</div> 
+    	</div>
+    </div>
 
 	  	
   	<div id="footer"></div>
