updated proj dates

--- a/ef.html
+++ b/ef.html
@@ -49,7 +49,7 @@
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
-					<h4>2021 • Deloitte Digital</h4>
+					<h4>2021 • Deloitte Digital • Health</h4>
 					<h1 style="color: black">Health Nonprofit Discovery</h1>
 				</div>
 			</div>
