--- a/hud.html
+++ b/hud.html
@@ -39,7 +39,7 @@
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
-					<h4>2020 - 2021 • Deloitte Digital</h4>
+					<h4>2021 • Deloitte Digital • Housing</h4>
 					<h1 style="color: black">Federal Design System</h1>
 				</div>
 			</div>
