--- a/fha.html
+++ b/fha.html
@@ -49,7 +49,7 @@
 		<div class="title-wrapper animate-reveal animate-first">
 			<div class="title">
 				<div>
-					<h4>2020 - 2021 • Deloitte Digital</h4>
+					<h4>2020 • Deloitte Digital • Housing</h4>
 					<h1 style="color: black">FHA Website Redesign</h1>
 				</div>
 			</div>
