--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
       <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Health</h4>
       <h2>Health Nonprofit Discovery</h2>
       <h3>I evaluated the overarching user experience of of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</h3>
-      <button id="myBtn" onclick="location.href='ef.html';" value="Go to EF project page">
+      <button id="myBtn" onclick="location.href='health-nonprofit.html';" value="Go to health nonprofit Discovery project page">
         <h4>Learn More</h4>
       </button>
     </div>
