updated proj overview

--- a/health-nonprofit.html
+++ b/health-nonprofit.html
@@ -55,7 +55,7 @@
 			<h2>Project Overview</h2>
 
 			<h3>
-				This client's website has a wealth of information, but users struggle to find what they need and tend to abandon the site quickly. Additionally, the organization is still struggling to reach a large segment of their target audience: individuals living with a particular neurological disorder who want to learn about the condition or get involved with the community.
+				The organization was struggling to reach a large segment of their target audience: individuals living with a particular neurological disorder who want to learn about the condition or get involved with the community. The client's website has a wealth of information, but users can't find what they need and tend to abandon the site quickly.
 			</h3>
 			
 			<div class="space"></div>
