updated styles on hud ds page

--- a/hud.html
+++ b/hud.html
@@ -59,14 +59,14 @@
 			
 			<h4>Approach</h4>
 			<p>
-				Our team created a clean, modern version of the agency's homepage and a few select high-traffic pages. We ultimately passed off 4 responsive mockups to a contractor for development.
+				Our team created a clean, modern version of the agency's homepage and a few select high-traffic pages.
 			</p>
 			
 			<div class="space"></div>
 
 			<h4>Outcome</h4>
 			<p>
-				Our team created a clean, modern version of the agency's homepage and a few select high-traffic pages. We ultimately passed off 4 responsive mockups to a contractor for development. 
+				We ultimately passed off 4 responsive mockups to a contractor for development. 
 			</p>
 
 <!-- 			<p>I was brought in to organize and ensure consistency across the work another Visual Designer had already done. I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</p> -->
@@ -104,9 +104,11 @@
 	</div>
 
 	<div class="full-width-mid-page">
-		<div class="panel dark" style="background-color: var(--mediumgray)">
-			<h2 style="padding-top: 5%;">Where we started</h2>
-			<h3 style="padding-left: 15%; padding-right: 15%">My goal for this project was to clean up the design files and build a comprehensive symbol library so we could hand the files off to developers. </h3>
+		<div class="panel dark" style="background-color: var(--green)">
+			<div class="mid-panel-text">
+				<h4>My Objective</h4>
+				<h2 style="color: black">Clean up the design files and build a comprehensive symbol library so we could hand the files off to developers.</h2>
+			</div>
 			<img style="padding-top: 5%" class="pic-left" src="pics/HUD/where-we-started.png">
 		</div>
 	</div>
@@ -116,8 +118,10 @@
 		<h2 class="body right">Component Audit</h2>
 			<div class="body right">
 				<div class="space"></div>
+				<h3>First, I took stock of all the components, text styles, and colors.</h3>
+				<div class="space"></div>
 				<h4>Ensuring consistency</h4>
-				<p>First, I took stock of all the components, text styles, and colors. I took note of which styles were used consistently and which were not, as well as general usage patterns and gaps.</p>
+				<p>I took note of which styles were used consistently and which were not, as well as general usage patterns and gaps.</p>
 				
 				<div class="space"></div>
 				<h4>Accessibility check</h4>
@@ -134,9 +138,11 @@
 	<div class="panel" id="Symbol Creation">
 		<h2 class="body right">Symbol Creation & Organization</h2>
 			<div class="body right">
+				<h3>After discussing the audit findings with my teammate, we aligned on which styles I'd add, remove, and tweak. I began symbolizing components and adding text & layer styles. </h3>
+				
 				<div class="space"></div>
 				<h4>Creating scalable + usable symbols</h4>
-				<p>After discussing the audit findings with my teammate, we aligned on which styles I'd add, remove, and tweak. I began symbolizing components and adding text & layer styles. </p>
+			
 				<p>My goal when creating symbols is always to make them as easy as possible to work with for the end user (aka fellow designers). I'm super cognizant of using helpful labels, making symbols scalable, and nesting symbols so that overrides are easy.
 				</p>
 
@@ -172,9 +178,8 @@
 		<h2 class="body right">Outcome</h2>
 			<div class="body right">
 				<div class="space"></div>
-				<h4>Dev Handoff</h4>
-				<p>As of March 2021, a contractor is developing these pages. Eventually the entire site will use these templates.
-				</p>
+				<h3>As of March 2021, a contractor is developing these pages. Eventually the entire site will use these templates.
+				</h3>
 				<div class="space"></div>
 				<h4>Learning from each other</h4>
 				<p>Apart from creating an organized design system, I also walked through this process with the Visual Designer and Creative Director I worked with and showed them the ropes so that they can integrate atomic design principles into future work. On the other hand, I learned a lot from my Visual counterpart about his creative process.</p>
