updating home page with circles

--- a/index.html
+++ b/index.html
@@ -56,17 +56,9 @@ $('#footer').load('http://emilyporat.com/footer.html');
           </div>
         </div>
  
-        <!-- <img src="pics/home-img.png" class="big-pic" style="height: 95vh"> -->
+        <img src="pics/home-background.png" class="big-pic" style="height: 95vh">
 
-<!--         <div id="arrow-down" onclick="slideDown()"><i class="fa fa-long-arrow-alt-down"></i></div> -->
       </div>
-
-<!--   <div class="full-width-mid-page" style="margin-bottom: 0">
-    <div class="panel dark" style="background-color: var(--mediumgray);">
-      <h2 style="padding-top: 5%;">Education + Experience</h2>
-      <img style="padding-top: 5%" class="pic-left" src="pics/timeline.png">
-    </div>
-  </div> -->
 
 
   <div class="full-width" id="summary" style="background-color: var(--purple); margin-top: 0px; margin-bottom: 0px;">
@@ -109,56 +101,6 @@ $('#footer').load('http://emilyporat.com/footer.html');
       </div>
     </div>
   </div>
-
-
-<!--   <div class="panel">
-    <h2>What I'm All About</h2>
-    <div class="space"></div>
-    <h4>Work</h4>
-    <h3>I work at Deloitte Digital, where my work has supported federal aid programs, nonprofits, and more.</h3>
-    
-    <div class="space"></div>
-    <h4>Mentorship</h4>
-    <h3>I'm a design generalist who loves every part of the process, from research to UI. I focus more on the early stages so we save time + money at the end of the day.</h3>
-    <h3>I'm passionate about mentorship and breaking down barriers to the design industry - I created a Junior Designer Mentorship Program at Deloitte from the ground up.</h3>
-    
-    <div class="space"></div>
-    <h4>Philosophy</h4>
-    <h3>My design process isn't an exact science, but it is scientific: I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapons when it comes to organizing and synthesizing complexity - which is what I do best.</h3>
-  </div> -->
-
-<!-- 	<div class="panel" id="summary" style="padding-top: 5%; padding-bottom: 5%">
-      <div class="panel context">
-        <div class="context-summary">
-          <h2>What I'm All About</h2>
-          <h3> 
-            My design process isn't an exact science, but it is scientific: I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapons when it comes to organizing and synthesizing complexity - which is what I do best.
-          </h3>
-          <div class="short-divider"></div>
-    			<p>While I consider myself a generalist, I shine most in the early stages of design because I firmly believe that (just enough) research is essential to getting a product right. There is nothing more satisfying to me than a neatly packaged deck that breaks down thousands of research findings into just a few slides.</p>
-    			<p>I have really high standards for myself - I'm not physically capable of half-assing something. I know when to step up and take charge, but I also strive to give others opportunities to make an impact.</p>
-    			<p>For more background on skills + experience, check out the <a href='about.html'>about</a> page or <a href="resume.pdf">download my résumé</a></p>
-        </div>
-
-        <div class="context-specifics">
-          <h4>What I'm Not All About</h4>
-          <div class="context-description"><p>I'm not a pixel-pusher, a professional rectangle-drawer, or a unicorn/ninja/superhero/insert-your-fave-buzzword. I care about nailing down the "why" before the "how," and I'm not afraid to stand up for what I believe in.</p></div>
-          <h4>How I Got Here</h4>
-          <div class="context-description"><p>I didn't stop learning when I graduated from CMU. Reading books like <a target="_blank" href="https://www.ruinedby.design/">Ruined by Design</a>, <a target="_blank" href="http://www.nointerface.com/book/">The Best Interface is No Interface</a>, and <a target="_blank" href="https://us.sagepub.com/en-us/nam/qualitative-research-evaluation-methods/book232962">Qualitative Research & Evaluation</a> (just to name a few) have helped me fill in the gaps and transition my career from case study to reality. They've influenced me to question my assumptions, ask 'why' more, and practice my craft with rigor.</p></div>
-        </div>
-    </div>
-	</div> -->
-
-<!-- 	<div class="full-width-mid-page" style="margin-bottom: 0">
-		<div class="panel dark" style="background-color: var(--purple); text-align: center; padding-top: 10%; padding-bottom: 10%;">
-			
-				<h2 style="color: black">This is a portfolio, after all.</h2>
-				<h3 style="width: 80%; margin-left: 10%; margin-right: 10%">You're probably here to see my project work. I have a limited selection online, but feel free to <a style="color: white" href='mailto:emporat@gmail.com'>email</a> me for more info!</h3>
-				<button style="margin-right: 10px" class="secondary-btn" onclick="location.href='projects.html';">View Projects</button>
-        <button class="btn" onclick="location.href='mailto:emporat@gmail.com';" value="Send me an email"; target="_blank">Get in touch</button>
-
-		</div>
-	</div> -->
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
 
