trying to fix height issues on home page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
       </div>
 
 
-  <div class="full-width" id="summary" style="background-color: var(--purple); margin-top: 0px; margin-bottom: 0px;">
+  <div class="full-width" id="summary" style="background-color: var(--purple); margin-top: 0px; margin-bottom: 0px; height: 95vh">
     <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
       <div class="title">
         <div>
@@ -76,7 +76,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
   </div>
 
 
-  <div class="full-width" style="background-color: var(--pink); margin-top: 0px; margin-bottom: 0px">
+  <div class="full-width" style="background-color: var(--pink); margin-top: 0px; margin-bottom: 0px; height: 95vh">
     <div class="title-wrapper animate-reveal animate-first" style="height: 95vh">
       <div class="title">
         <div>
