added circles to get in touch section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
         </div>
       </div>
     </div>
+    <img src="pics/home-background-orange.png" class="big-pic" style="height: 95vh">
   </div>
 
 <div id="arrow-up" onclick="slideUp()"><i class="fa fa-angle-up"></i></div>
